--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     
     <!-- JSON-LD Structured Data - Person Schema -->
     <script type="application/ld+json">
@@ -163,447 +164,7 @@
     ]
     </script>
 
-    <style>
-        /* CSS Variables for consistent theming */
-        :root {
-            --bg-primary: #2A324B;
-            --text-primary: #F4F4F4;
-            --text-secondary: #D1D1D1;
-            --accent-gold: #B48A64;
-            --bg-section: #3D486B;
-            --font-heading: 'Cormorant Garamond', serif;
-            --font-body: 'Inter', sans-serif;
-        }
 
-        /* Reset and Base Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            font-family: var(--font-body);
-            font-weight: 300;
-            line-height: 1.6;
-            color: var(--text-primary);
-            background-color: var(--bg-primary);
-            overflow-x: hidden;
-        }
-
-        /* Typography */
-        h1, h2 {
-            font-family: var(--font-heading);
-            font-weight: 400;
-            margin-bottom: 1.5rem;
-        }
-
-        h1 {
-            font-size: clamp(2.5rem, 5vw, 4rem);
-            text-align: center;
-        }
-
-        h2 {
-            font-size: clamp(2rem, 4vw, 3rem);
-            color: var(--accent-gold);
-            text-align: center;
-            margin-bottom: 3rem;
-        }
-
-        p {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            margin-bottom: 1.5rem;
-        }
-
-        /* Container */
-        .container {
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        /* Section Spacing */
-        section {
-            padding: 80px 0;
-        }
-
-        /* Hero Section */
-        #hero {
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            text-align: center;
-        }
-
-        #particles-canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-        }
-
-        .tagline {
-            font-size: 1.2rem;
-            color: var(--text-secondary);
-            font-weight: 300;
-            margin-top: 1rem;
-        }
-
-        .scroll-arrow {
-            position: absolute;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 2rem;
-            color: var(--accent-gold);
-            animation: bounce 2s infinite;
-            cursor: pointer;
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateX(-50%) translateY(0);
-            }
-            40% {
-                transform: translateX(-50%) translateY(-10px);
-            }
-            60% {
-                transform: translateX(-50%) translateY(-5px);
-            }
-        }
-
-        /* Manifesto Section */
-        #manifesto {
-            background-color: var(--bg-section);
-            text-align: center;
-        }
-
-        .manifesto-text {
-            max-width: 800px;
-            margin: 0 auto;
-            font-size: 1.3rem;
-            line-height: 1.9;
-            color: var(--text-secondary);
-        }
-
-        /* Gallery Section */
-        #gallery {
-            background-color: var(--bg-primary);
-        }
-
-        .gallery-grid {
-            column-count: 3;
-            column-gap: 20px;
-            margin-top: 2rem;
-        }
-
-        @media (max-width: 768px) {
-            .gallery-grid {
-                column-count: 2;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .gallery-grid {
-                column-count: 1;
-            }
-        }
-
-        .gallery-item {
-            break-inside: avoid;
-            margin-bottom: 20px;
-            cursor: pointer;
-            position: relative;
-            overflow: hidden;
-            border-radius: 8px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .gallery-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 20px 40px rgba(180, 138, 100, 0.3);
-        }
-
-        .gallery-item img {
-            width: 100%;
-            height: auto;
-            display: block;
-            border-radius: 8px;
-            transition: filter 0.3s ease;
-        }
-
-        .gallery-item:hover img {
-            filter: brightness(1.1);
-        }
-
-        .gallery-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(to top, rgba(180, 138, 100, 0.8) 0%, transparent 50%);
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            display: flex;
-            align-items: flex-end;
-            padding: 20px;
-        }
-
-        .gallery-item:hover .gallery-overlay {
-            opacity: 1;
-        }
-
-        .overlay-text {
-            color: white;
-            font-weight: 500;
-        }
-
-        /* Artist Portrait Section */
-        #artist-portrait {
-            background-color: #000000;
-            padding: 80px 0;
-            text-align: center;
-        }
-
-        .artist-image {
-            max-width: 600px;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
-        }
-
-        /* About and Biography Sections */
-        #about, #biography {
-            background-color: var(--bg-section);
-            text-align: center;
-        }
-
-        .content-text {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: left;
-        }
-
-        /* Contact Section */
-        #contact {
-            background-color: var(--bg-primary);
-            text-align: center;
-        }
-
-        .contact-form {
-            max-width: 600px;
-            margin: 0 auto;
-            text-align: left;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            color: var(--text-secondary);
-            font-weight: 400;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 12px 16px;
-            border: 2px solid var(--bg-section);
-            border-radius: 6px;
-            background-color: var(--bg-section);
-            color: var(--text-primary);
-            font-family: var(--font-body);
-            font-size: 1rem;
-            transition: border-color 0.3s ease;
-        }
-
-        .form-group input:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: var(--accent-gold);
-        }
-
-        .form-group textarea {
-            resize: vertical;
-            height: 120px;
-        }
-
-        .submit-btn {
-            background-color: var(--accent-gold);
-            color: var(--bg-primary);
-            border: none;
-            padding: 14px 30px;
-            border-radius: 6px;
-            font-family: var(--font-body);
-            font-size: 1rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            margin-top: 1rem;
-        }
-
-        .submit-btn:hover {
-            background-color: #A07B5E;
-            transform: translateY(-2px);
-        }
-
-        .social-links {
-            margin-top: 3rem;
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-        }
-
-        .social-links a {
-            color: var(--text-secondary);
-            font-size: 1.5rem;
-            transition: color 0.3s ease, transform 0.2s ease;
-        }
-
-        .social-links a:hover {
-            color: var(--accent-gold);
-            transform: translateY(-2px);
-        }
-
-        /* Lightbox Modal */
-        .lightbox {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            z-index: 1000;
-            padding: 20px;
-        }
-
-        .lightbox-content {
-            position: relative;
-            max-width: 90%;
-            max-height: 90%;
-            margin: auto;
-            display: block;
-            margin-top: 5%;
-        }
-
-        .lightbox img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-
-        .lightbox-info {
-            background-color: var(--bg-section);
-            color: var(--text-primary);
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 8px;
-        }
-
-        .lightbox-info h3 {
-            font-family: var(--font-heading);
-            font-size: 1.5rem;
-            color: var(--accent-gold);
-            margin-bottom: 10px;
-        }
-
-        .close-lightbox {
-            position: absolute;
-            top: 20px;
-            right: 35px;
-            color: var(--text-primary);
-            font-size: 40px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: color 0.3s ease;
-        }
-
-        .close-lightbox:hover {
-            color: var(--accent-gold);
-        }
-
-        /* Animation Classes */
-        .fade-up {
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
-        }
-
-        .fade-up.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .fade-in {
-            opacity: 0;
-            transition: opacity 0.8s ease;
-        }
-
-        .fade-in.visible {
-            opacity: 1;
-        }
-
-        /* Word animation for manifesto */
-        .word {
-            display: inline-block;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: wordFadeIn 0.8s ease forwards;
-        }
-
-        @keyframes wordFadeIn {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .container {
-                padding: 0 1rem;
-            }
-
-            section {
-                padding: 60px 0;
-            }
-
-            h1 {
-                font-size: 2.5rem;
-            }
-
-            h2 {
-                font-size: 2rem;
-            }
-
-            .tagline {
-                font-size: 1rem;
-            }
-
-            .manifesto-text {
-                font-size: 1.1rem;
-            }
-        }
     </style>
 </head>
 <body>
