--- a/es.html
+++ b/es.html
@@ -170,8 +170,8 @@
 <body>
     <!-- Language Selector -->
     <div class="language-selector">
-        <a href="/" class="language-btn active" data-lang="en">🇬🇧 EN</a>
-        <a href="es.html" class="language-btn" data-lang="es">🇪🇸 ES</a>
+        <a href="/" class="language-btn" data-lang="en">🇬🇧 EN</a>
+        <a href="es.html" class="language-btn active" data-lang="es">🇪🇸 ES</a>
         <a href="pl.html" class="language-btn" data-lang="pl">🇵🇱 PL</a>
     </div>
     <!-- Hero Section -->
