--- a/es.html
+++ b/es.html
@@ -314,8 +314,14 @@
             <h2 class="fade-up">Contacto y Consultas</h2>
             
             <div class="social-links fade-up">
-                <a href="#" aria-label="Instagram">📷</a>
-                <a href="#" aria-label="LinkedIn">🔗</a>
+                <a href="https://www.instagram.com/kathe.s.v/" target="_blank" rel="noopener noreferrer" class="social-link">
+                    <span class="social-icon">📷</span>
+                    <span class="social-username">@kathe.sv</span>
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer" class="social-link" style="display: none;">
+                    <span class="social-icon">🔗</span>
+                    <span class="social-username">LinkedIn</span>
+                </a>
             </div>
         </div>
     </section>
