--- a/index.html
+++ b/index.html
@@ -201,78 +201,8 @@
         <div class="container">
             <h2 class="fade-up">Gallery of Works</h2>
             <div class="gallery-grid">
-                <div class="gallery-item fade-up" data-title="Resignification of Ancestral Practice I" data-description="An exploration of ritualistic concepts native to the Caribbean region." data-image="https://picsum.photos/seed/art1/400/600">
-                    <img src="https://picsum.photos/seed/art1/400/600" alt="Resignification of Ancestral Practice I - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Resignification of Ancestral Practice I</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Caribbean Mysticism: Detaching from Taboo" data-description="Highlighting the historical value and relevance of ancestral practices." data-image="https://picsum.photos/seed/art2/400/450">
-                    <img src="https://picsum.photos/seed/art2/400/450" alt="Caribbean Mysticism: Detaching from Taboo - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Caribbean Mysticism</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Social Construction of Identity" data-description="A contemporary artistic approach to re-signifying our cultural heritage." data-image="https://picsum.photos/seed/art3/400/550">
-                    <img src="https://picsum.photos/seed/art3/400/550" alt="Social Construction of Identity - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Social Construction of Identity</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Ritualistic Resonance" data-description="Exploring the deep connections between traditional rituals and modern artistic expression." data-image="https://picsum.photos/seed/art4/400/480">
-                    <img src="https://picsum.photos/seed/art4/400/480" alt="Ritualistic Resonance - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Ritualistic Resonance</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Ancestral Voices" data-description="A visual dialogue with the spiritual heritage of the Caribbean region." data-image="https://picsum.photos/seed/art5/400/520">
-                    <img src="https://picsum.photos/seed/art5/400/520" alt="Ancestral Voices - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Ancestral Voices</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Mystical Transformation" data-description="Capturing the essence of spiritual transformation within Caribbean mystical practices." data-image="https://picsum.photos/seed/art6/400/580">
-                    <img src="https://picsum.photos/seed/art6/400/580" alt="Mystical Transformation - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Mystical Transformation</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Cultural Reclamation" data-description="Reclaiming and celebrating the rich cultural tapestry of Caribbean spiritual traditions." data-image="https://picsum.photos/seed/art7/400/460">
-                    <img src="https://picsum.photos/seed/art7/400/460" alt="Cultural Reclamation - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Cultural Reclamation</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Sacred Geometries" data-description="Exploring the sacred patterns and symbols embedded in Caribbean ritualistic art." data-image="https://picsum.photos/seed/art8/400/540">
-                    <img src="https://picsum.photos/seed/art8/400/540" alt="Sacred Geometries - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Sacred Geometries</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Spiritual Convergence" data-description="Where ancestral wisdom meets contemporary artistic vision in a harmonious blend." data-image="https://picsum.photos/seed/art9/400/500">
-                    <img src="https://picsum.photos/seed/art9/400/500" alt="Spiritual Convergence - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Spiritual Convergence</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Caribbean Cosmology" data-description="A visual exploration of the cosmic worldview inherent in Caribbean spiritual practices." data-image="https://picsum.photos/seed/art10/400/470">
-                    <img src="https://picsum.photos/seed/art10/400/470" alt="Caribbean Cosmology - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Caribbean Cosmology</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Healing Waters" data-description="Honoring the healing and purification rituals central to Caribbean spiritual traditions." data-image="https://picsum.photos/seed/art11/400/560">
-                    <img src="https://picsum.photos/seed/art11/400/560" alt="Healing Waters - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Healing Waters</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Temporal Bridges" data-description="Connecting past and present through the timeless language of ritualistic art." data-image="https://picsum.photos/seed/art12/400/510">
-                    <img src="https://picsum.photos/seed/art12/400/510" alt="Temporal Bridges - Abstract painting">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Temporal Bridges</div>
-                    </div>
-                </div>
+                <!-- Gallery items will be loaded dynamically from the gallery directory -->
+                <div class="loading-text">Loading gallery...</div>
             </div>
         </div>
     </section>
@@ -280,7 +210,17 @@
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
         <div class="container">
-            <img src="https://picsum.photos/seed/artistportrait/600/800" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
+            <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
+        </div>
+    </section>
+
+    <!-- Biography Section -->
+    <section id="biography">
+        <div class="container">
+            <h2 class="fade-up">About the Artist</h2>
+            <div class="content-text fade-up">
+                <p>Katerine Salazar Villamil, born in El Carmen de Bolívar, Colombia, focuses her work on the exploration, investigation, creation, and representation of ritualistic, aesthetic, and mystical concepts native to the Caribbean region. Through a contemporary artistic approach, her work seeks to re-signify these ancestral practices, promoting a deeper and more respectful appreciation of our cultural heritage.</p>
+            </div>
         </div>
     </section>
 
@@ -294,16 +234,6 @@
                 <p>Through her innovative approach, she challenges conventional perceptions of ritualistic practices, transforming what has often been misunderstood or stigmatized into powerful visual narratives that celebrate the depth and complexity of Caribbean mysticism.</p>
                 
                 <p>Each piece in her collection represents a careful investigation into the aesthetic and spiritual dimensions of her cultural heritage, offering viewers an opportunity to engage with these traditions through a lens of respect, understanding, and artistic beauty.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Biography Section -->
-    <section id="biography">
-        <div class="container">
-            <h2 class="fade-up">About the Artist</h2>
-            <div class="content-text fade-up">
-                <p>Katerine Salazar Villamil, born in El Carmen de Bolívar, Colombia, focuses her work on the exploration, investigation, creation, and representation of ritualistic, aesthetic, and mystical concepts native to the Caribbean region. Through a contemporary artistic approach, her work seeks to re-signify these ancestral practices, promoting a deeper and more respectful appreciation of our cultural heritage.</p>
             </div>
         </div>
     </section>
@@ -339,6 +269,7 @@
     </div>
 
     <!-- JavaScript Files -->
+    <script src="js/gallery.js"></script>
     <script type="module" src="js/main.js"></script>
     <script>
         // Fallback for browsers that don't support modules
