--- a/es.html
+++ b/es.html
@@ -201,88 +201,31 @@
         <div class="container">
             <h2 class="fade-up">Galería de Obras</h2>
             <div class="gallery-grid">
-                <div class="gallery-item fade-up" data-title="Resignificación de la Práctica Ancestral I" data-description="Una exploración de conceptos ritualísticos nativos de la región del Caribe." data-image="https://picsum.photos/seed/art1/400/600">
-                    <img src="https://picsum.photos/seed/art1/400/600" alt="Resignificación de la Práctica Ancestral I - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Resignificación de la Práctica Ancestral I</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Misticismo Caribeño: Desprendiéndose del Tabú" data-description="Destacando el valor histórico y la relevancia de las prácticas ancestrales." data-image="https://picsum.photos/seed/art2/400/450">
-                    <img src="https://picsum.photos/seed/art2/400/450" alt="Misticismo Caribeño: Desprendiéndose del Tabú - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Misticismo Caribeño</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Construcción Social de la Identidad" data-description="Un enfoque artístico contemporáneo para resignificar nuestro patrimonio cultural." data-image="https://picsum.photos/seed/art3/400/550">
-                    <img src="https://picsum.photos/seed/art3/400/550" alt="Construcción Social de la Identidad - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Construcción Social de la Identidad</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Resonancia Ritualística" data-description="Explorando las conexiones profundas entre los rituales tradicionales y la expresión artística moderna." data-image="https://picsum.photos/seed/art4/400/480">
-                    <img src="https://picsum.photos/seed/art4/400/480" alt="Resonancia Ritualística - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Resonancia Ritualística</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Voces Ancestrales" data-description="Un diálogo visual con la herencia espiritual de la región del Caribe." data-image="https://picsum.photos/seed/art5/400/520">
-                    <img src="https://picsum.photos/seed/art5/400/520" alt="Voces Ancestrales - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Voces Ancestrales</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Transformación Mística" data-description="Capturando la esencia de la transformación espiritual en las prácticas místicas caribeñas." data-image="https://picsum.photos/seed/art6/400/580">
-                    <img src="https://picsum.photos/seed/art6/400/580" alt="Transformación Mística - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Transformación Mística</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Reivindicación Cultural" data-description="Reclamando y celebrando el rico tapiz cultural de las tradiciones espirituales caribeñas." data-image="https://picsum.photos/seed/art7/400/460">
-                    <img src="https://picsum.photos/seed/art7/400/460" alt="Reivindicación Cultural - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Reivindicación Cultural</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Geometrías Sagradas" data-description="Explorando los patrones y símbolos sagrados incrustados en el arte ritualístico caribeño." data-image="https://picsum.photos/seed/art8/400/540">
-                    <img src="https://picsum.photos/seed/art8/400/540" alt="Geometrías Sagradas - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Geometrías Sagradas</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Convergencia Espiritual" data-description="Donde la sabiduría ancestral se encuentra con la visión artística contemporánea en una mezcla armoniosa." data-image="https://picsum.photos/seed/art9/400/500">
-                    <img src="https://picsum.photos/seed/art9/400/500" alt="Convergencia Espiritual - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Convergencia Espiritual</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Cosmología Caribeña" data-description="Una exploración visual de la cosmovisión cósmica inherente a las prácticas espirituales caribeñas." data-image="https://picsum.photos/seed/art10/400/470">
-                    <img src="https://picsum.photos/seed/art10/400/470" alt="Cosmología Caribeña - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Cosmología Caribeña</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Aguas Sanadoras" data-description="Rindiendo homenaje a los rituales de curación y purificación centrales en las tradiciones espirituales caribeñas." data-image="https://picsum.photos/seed/art11/400/560">
-                    <img src="https://picsum.photos/seed/art11/400/560" alt="Aguas Sanadoras - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Aguas Sanadoras</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Puentes Temporales" data-description="Conectando pasado y presente a través del lenguaje atemporal del arte ritualístico." data-image="https://picsum.photos/seed/art12/400/510">
-                    <img src="https://picsum.photos/seed/art12/400/510" alt="Puentes Temporales - Pintura abstracta">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Puentes Temporales</div>
-                    </div>
-                </div>
+                <!-- Gallery items will be loaded dynamically from the gallery directory -->
+                <div class="loading-text">Loading gallery...</div>
             </div>
         </div>
     </section>
 
+
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
         <div class="container">
-            <img src="https://picsum.photos/seed/artistportrait/600/800" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
+            <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
         </div>
     </section>
+
+
+    <!-- Biography Section -->
+    <section id="biography">
+        <div class="container">
+            <h2 class="fade-up">Sobre la Artista</h2>
+            <div class="content-text fade-up">
+                <p>Katerine Salazar Villamil, nacida en El Carmen de Bolívar, Colombia, centra su trabajo en la exploración, investigación, creación y representación de conceptos ritualísticos, estéticos y místicos propios de la región del Caribe. A través de un enfoque artístico contemporáneo, su obra busca resignificar estas prácticas ancestrales, promoviendo una apreciación más profunda y respetuosa de nuestro patrimonio cultural.</p>
+            </div>
+        </div>
+    </section>
+    
 
     <!-- About Section -->
     <section id="about">
@@ -298,15 +241,6 @@
         </div>
     </section>
 
-    <!-- Biography Section -->
-    <section id="biography">
-        <div class="container">
-            <h2 class="fade-up">Sobre la Artista</h2>
-            <div class="content-text fade-up">
-                <p>Katerine Salazar Villamil, nacida en El Carmen de Bolívar, Colombia, centra su trabajo en la exploración, investigación, creación y representación de conceptos ritualísticos, estéticos y místicos propios de la región del Caribe. A través de un enfoque artístico contemporáneo, su obra busca resignificar estas prácticas ancestrales, promoviendo una apreciación más profunda y respetuosa de nuestro patrimonio cultural.</p>
-            </div>
-        </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -339,6 +273,7 @@
     </div>
 
     <!-- JavaScript Files -->
+    <script src="js/gallery.js"></script>
     <script type="module" src="js/main.js"></script>
     <script>
         // Fallback for browsers that don't support modules
