--- a/pl.html
+++ b/pl.html
@@ -201,78 +201,8 @@
         <div class="container">
             <h2 class="fade-up">Galeria Prac</h2>
             <div class="gallery-grid">
-                <div class="gallery-item fade-up" data-title="Nadanie nowego znaczenia praktykom przodków I" data-description="Eksploracja rytualnych koncepcji charakterystycznych dla regionu Karaibów." data-image="https://picsum.photos/seed/art1/400/600">
-                    <img src="https://picsum.photos/seed/art1/400/600" alt="Nadanie nowego znaczenia praktykom przodków I - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Nadanie nowego znaczenia praktykom przodków I</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Mistyka Karaibów: Uwolnienie od Tabu" data-description="Podkreślenie historycznej wartości i znaczenia praktyk przodków." data-image="https://picsum.photos/seed/art2/400/450">
-                    <img src="https://picsum.photos/seed/art2/400/450" alt="Mistyka Karaibów: Uwolnienie od Tabu - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Mistyka Karaibów</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Społeczna Konstrukcja Tożsamości" data-description="Współczesne artystyczne podejście do nadawania nowego znaczenia naszemu dziedzictwu kulturowemu." data-image="https://picsum.photos/seed/art3/400/550">
-                    <img src="https://picsum.photos/seed/art3/400/550" alt="Społeczna Konstrukcja Tożsamości - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Społeczna Konstrukcja Tożsamości</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Rezonans Rytualny" data-description="Badanie głębokich powiązań między tradycyjnymi rytuałami a współczesną ekspresją artystyczną." data-image="https://picsum.photos/seed/art4/400/480">
-                    <img src="https://picsum.photos/seed/art4/400/480" alt="Rezonans Rytualny - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Rezonans Rytualny</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Głosy Przodków" data-description="Wizualny dialog z duchowym dziedzictwem regionu Karaibów." data-image="https://picsum.photos/seed/art5/400/520">
-                    <img src="https://picsum.photos/seed/art5/400/520" alt="Głosy Przodków - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Głosy Przodków</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Mistyczna Przemiana" data-description="Uchwycenie istoty duchowej przemiany w karaibskich praktykach mistycznych." data-image="https://picsum.photos/seed/art6/400/580">
-                    <img src="https://picsum.photos/seed/art6/400/580" alt="Mistyczna Przemiana - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Mistyczna Przemiana</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Rekonkwista Kulturowa" data-description="Odzyskiwanie i celebrowanie bogatego dziedzictwa karaibskich tradycji duchowych." data-image="https://picsum.photos/seed/art7/400/460">
-                    <img src="https://picsum.photos/seed/art7/400/460" alt="Rekonkwista Kulturowa - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Rekonkwista Kulturowa</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Święte Geometrie" data-description="Badanie świętych wzorów i symboli obecnych w karaibskiej sztuce rytualnej." data-image="https://picsum.photos/seed/art8/400/540">
-                    <img src="https://picsum.photos/seed/art8/400/540" alt="Święte Geometrie - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Święte Geometrie</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Duchowa Konwergencja" data-description="Miejsce, w którym mądrość przodków spotyka się ze współczesną wizją artystyczną w harmonijnej syntezie." data-image="https://picsum.photos/seed/art9/400/500">
-                    <img src="https://picsum.photos/seed/art9/400/500" alt="Duchowa Konwergencja - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Duchowa Konwergencja</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Kosmologia Karaibów" data-description="Wizualna eksploracja kosmicznego światopoglądu tkwiącego w karaibskich praktykach duchowych." data-image="https://picsum.photos/seed/art10/400/470">
-                    <img src="https://picsum.photos/seed/art10/400/470" alt="Kosmologia Karaibów - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Kosmologia Karaibów</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Uzdrawiające Wody" data-description="Oddanie hołdu rytuałom uzdrawiania i oczyszczania, kluczowym dla karaibskich tradycji duchowych." data-image="https://picsum.photos/seed/art11/400/560">
-                    <img src="https://picsum.photos/seed/art11/400/560" alt="Uzdrawiające Wody - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Uzdrawiające Wody</div>
-                    </div>
-                </div>
-                <div class="gallery-item fade-up" data-title="Mosty Czasu" data-description="Łączenie przeszłości z teraźniejszością poprzez ponadczasowy język sztuki rytualnej." data-image="https://picsum.photos/seed/art12/400/510">
-                    <img src="https://picsum.photos/seed/art12/400/510" alt="Mosty Czasu - Obraz abstrakcyjny">
-                    <div class="gallery-overlay">
-                        <div class="overlay-text">Mosty Czasu</div>
-                    </div>
-                </div>
+                <!-- Gallery items will be loaded dynamically from the gallery directory -->
+                <div class="loading-text">Loading gallery...</div>
             </div>
         </div>
     </section>
@@ -280,7 +210,18 @@
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
         <div class="container">
-            <img src="https://picsum.photos/seed/artistportrait/600/800" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
+            <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
+        </div>
+    </section>
+
+
+    <!-- Biography Section -->
+    <section id="biography">
+        <div class="container">
+            <h2 class="fade-up">O Artystce</h2>
+            <div class="content-text fade-up">
+                <p>Katerine Salazar Villamil, urodzona w El Carmen de Bolívar w Kolumbii, koncentruje swoją twórczość na badaniu, analizie, tworzeniu i przedstawianiu rytualnych, estetycznych i mistycznych koncepcji charakterystycznych dla regionu Karaibów. Poprzez współczesne podejście artystyczne jej prace dążą do nadania nowego znaczenia tym odwiecznym praktykom, promując głębsze i bardziej świadome docenienie naszego dziedzictwa kulturowego.</p>
+            </div>
         </div>
     </section>
 
@@ -298,15 +239,6 @@
         </div>
     </section>
 
-    <!-- Biography Section -->
-    <section id="biography">
-        <div class="container">
-            <h2 class="fade-up">O Artystce</h2>
-            <div class="content-text fade-up">
-                <p>Katerine Salazar Villamil, urodzona w El Carmen de Bolívar w Kolumbii, koncentruje swoją twórczość na badaniu, analizie, tworzeniu i przedstawianiu rytualnych, estetycznych i mistycznych koncepcji charakterystycznych dla regionu Karaibów. Poprzez współczesne podejście artystyczne jej prace dążą do nadania nowego znaczenia tym odwiecznym praktykom, promując głębsze i bardziej świadome docenienie naszego dziedzictwa kulturowego.</p>
-            </div>
-        </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -339,6 +271,7 @@
     </div>
 
     <!-- JavaScript Files -->
+    <script src="js/gallery.js"></script>
     <script type="module" src="js/main.js"></script>
     <script>
         // Fallback for browsers that don't support modules
