Fixed Animation Background

--- a/index.html
+++ b/index.html
@@ -174,9 +174,13 @@
         <a href="es.html" class="language-btn" data-lang="es">🇪🇸 ES</a>
         <a href="pl.html" class="language-btn" data-lang="pl">🇵🇱 PL</a>
     </div>
+    <!-- Fixed Animation Background -->
+    <div id="animation-bg">
+        <canvas id="particles-canvas"></canvas>
+    </div>
+
     <!-- Hero Section -->
     <section id="hero">
-        <canvas id="particles-canvas"></canvas>
         <div class="hero-content">
             <h1 class="fade-in">Katerine Salazar Villamil</h1>
             <p class="tagline fade-in">Contemporary Caribbean Artist | Explorer of the Mystical</p>
