--- a/es.html
+++ b/es.html
@@ -284,5 +284,11 @@
             }
         });
     </script>
+    
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p>Creado con ❤️ en 2025 para Katerine Salazar por Przemysław Majdak</p>
+        </div>
+    </footer>
     </body>
 </html>
