--- a/index.html
+++ b/index.html
@@ -284,5 +284,11 @@
             }
         });
     </script>
+    
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p>Created with ❤️ in 2025 for Katerine Salazar by Przemysław Majdak</p>
+        </div>
+    </footer>
     </body>
 </html>
