--- a/pl.html
+++ b/pl.html
@@ -282,5 +282,11 @@
             }
         });
     </script>
+    
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p>Stworzone z ❤️ w 2025 dla Katerine Salazar przez Przemysława Majdaka</p>
+        </div>
+    </footer>
     </body>
 </html>
