--- a/index.html
+++ b/index.html
@@ -213,17 +213,15 @@
 
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
-        <div class="container">
-            <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
-        </div>
-    </section>
-
-    <!-- Biography Section -->
-    <section id="biography">
-        <div class="container">
-            <h2 class="fade-up">About the Artist</h2>
-            <div class="content-text fade-up">
-                <p>Katerine Salazar Villamil, born in El Carmen de Bolívar, Colombia, focuses her work on the exploration, investigation, creation, and representation of ritualistic, aesthetic, and mystical concepts native to the Caribbean region. Through a contemporary artistic approach, her work seeks to re-signify these ancestral practices, promoting a deeper and more respectful appreciation of our cultural heritage.</p>
+        <div class="container artist-container">
+            <div class="artist-content">
+                <h2 class="fade-up">About the Artist</h2>
+                <div class="content-text fade-up">
+                    <p>Katerine Salazar Villamil, born in El Carmen de Bolívar, Colombia, focuses her work on the exploration, investigation, creation, and representation of ritualistic, aesthetic, and mystical concepts native to the Caribbean region. Through a contemporary artistic approach, her work seeks to re-signify these ancestral practices, promoting a deeper and more respectful appreciation of our cultural heritage.</p>
+                </div>
+            </div>
+            <div class="artist-image-container">
+                <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
             </div>
         </div>
     </section>
