update wersji jezykowych

--- a/es.html
+++ b/es.html
@@ -174,9 +174,13 @@
         <a href="es.html" class="language-btn active" data-lang="es">🇪🇸 ES</a>
         <a href="pl.html" class="language-btn" data-lang="pl">🇵🇱 PL</a>
     </div>
+    <!-- Fixed Animation Background -->
+    <div id="animation-bg">
+        <canvas id="particles-canvas"></canvas>
+    </div>
+
     <!-- Hero Section -->
     <section id="hero">
-        <canvas id="particles-canvas"></canvas>
         <div class="hero-content">
             <h1 class="fade-in">Katerine Salazar Villamil</h1>
             <p class="tagline fade-in">Artista Caribeña Contemporánea | Exploradora de lo Místico</p>
@@ -210,18 +214,15 @@
 
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
-        <div class="container">
-            <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
-        </div>
-    </section>
-
-
-    <!-- Biography Section -->
-    <section id="biography">
-        <div class="container">
-            <h2 class="fade-up">Sobre la Artista</h2>
-            <div class="content-text fade-up">
-                <p>Katerine Salazar Villamil, nacida en El Carmen de Bolívar, Colombia, centra su trabajo en la exploración, investigación, creación y representación de conceptos ritualísticos, estéticos y místicos propios de la región del Caribe. A través de un enfoque artístico contemporáneo, su obra busca resignificar estas prácticas ancestrales, promoviendo una apreciación más profunda y respetuosa de nuestro patrimonio cultural.</p>
+        <div class="container artist-container">
+            <div class="artist-content">
+                <h2 class="fade-up">Sobre la Artista</h2>
+                <div class="content-text fade-up">
+                    <p>Katerine Salazar Villamil, nacida en El Carmen de Bolívar, Colombia, centra su trabajo en la exploración, investigación, creación y representación de conceptos ritualísticos, estéticos y místicos propios de la región del Caribe. A través de un enfoque artístico contemporáneo, su obra busca resignificar estas prácticas ancestrales, promoviendo una apreciación más profunda y respetuosa de nuestro patrimonio cultural.</p>
+                </div>
+            </div>
+            <div class="artist-image-container">
+                <img src="/gallery/portret_salazar.png" alt="Retrato de Katerine Salazar Villamil" class="artist-image fade-in">
             </div>
         </div>
     </section>
