--- a/pl.html
+++ b/pl.html
@@ -174,9 +174,13 @@
         <a href="es.html" class="language-btn" data-lang="es">🇪🇸 ES</a>
         <a href="pl.html" class="language-btn active" data-lang="pl">🇵🇱 PL</a>
     </div>
+    <!-- Fixed Animation Background -->
+    <div id="animation-bg">
+        <canvas id="particles-canvas"></canvas>
+    </div>
+
     <!-- Hero Section -->
     <section id="hero">
-        <canvas id="particles-canvas"></canvas>
         <div class="hero-content">
             <h1 class="fade-in">Katerine Salazar Villamil</h1>
             <p class="tagline fade-in">Współczesna Artystka Karaibów | Badaczka Mistycyzmu</p>
@@ -209,18 +213,15 @@
 
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
-        <div class="container">
-            <img src="/gallery/portret_salazar.png" alt="Portrait of Katerine Salazar Villamil" class="artist-image fade-in">
-        </div>
-    </section>
-
-
-    <!-- Biography Section -->
-    <section id="biography">
-        <div class="container">
-            <h2 class="fade-up">O Artystce</h2>
-            <div class="content-text fade-up">
-                <p>Katerine Salazar Villamil, urodzona w El Carmen de Bolívar w Kolumbii, koncentruje swoją twórczość na badaniu, analizie, tworzeniu i przedstawianiu rytualnych, estetycznych i mistycznych koncepcji charakterystycznych dla regionu Karaibów. Poprzez współczesne podejście artystyczne jej prace dążą do nadania nowego znaczenia tym odwiecznym praktykom, promując głębsze i bardziej świadome docenienie naszego dziedzictwa kulturowego.</p>
+        <div class="container artist-container">
+            <div class="artist-content">
+                <h2 class="fade-up">O Artystce</h2>
+                <div class="content-text fade-up">
+                    <p>Katerine Salazar Villamil, urodzona w El Carmen de Bolívar w Kolumbii, koncentruje swoją twórczość na badaniu, analizie, tworzeniu i przedstawianiu rytualnych, estetycznych i mistycznych koncepcji charakterystycznych dla regionu Karaibów. Poprzez współczesne podejście artystyczne jej prace dążą do nadania nowego znaczenia tym odwiecznym praktykom, promując głębsze i bardziej świadome docenienie naszego dziedzictwa kulturowego.</p>
+                </div>
+            </div>
+            <div class="artist-image-container">
+                <img src="/gallery/portret_salazar.png" alt="Portret Katerine Salazar Villamil" class="artist-image fade-in">
             </div>
         </div>
     </section>
