--- a/pl.html
+++ b/pl.html
@@ -255,6 +255,12 @@
                     <span class="social-icon">🔗</span>
                     <span class="social-username">LinkedIn</span>
                 </a>
+                <div class="email-address fade-up" style="margin-top: 20px;">
+                    <a href="mailto:kathe.s.v@proton.me" class="social-link">
+                        <span class="social-icon">✉️</span>
+                        <span class="social-username">kathe.s.v@proton.me</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
