--- a/index.html
+++ b/index.html
@@ -203,9 +203,20 @@
     <!-- Gallery Section -->
     <section id="gallery">
         <div class="container">
-            <h2 class="fade-up">Gallery of Works</h2>
+            <h2 class="fade-up">Watercolor Gallery</h2>
             <div class="gallery-grid">
                 <!-- Gallery items will be loaded dynamically from the gallery directory -->
+                <div class="loading-text">Loading gallery...</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery 2 Section -->
+    <section id="gallery2" class="gallery-section">
+        <div class="container">
+            <h2 class="fade-up">Magical Realism</h2>
+            <div class="gallery-grid gallery-grid-2">
+                <!-- Gallery 2 items will be loaded dynamically -->
                 <div class="loading-text">Loading gallery...</div>
             </div>
         </div>
