gallery es i pl update

--- a/es.html
+++ b/es.html
@@ -203,10 +203,21 @@
     <!-- Gallery Section -->
     <section id="gallery">
         <div class="container">
-            <h2 class="fade-up">Galería de Obras</h2>
+            <h2 class="fade-up">Galería de Acuarelas</h2>
             <div class="gallery-grid">
                 <!-- Gallery items will be loaded dynamically from the gallery directory -->
-                <div class="loading-text">Loading gallery...</div>
+                <div class="loading-text">Cargando galería...</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery 2 Section -->
+    <section id="gallery2" class="gallery-section">
+        <div class="container">
+            <h2 class="fade-up">Realismo Mágico</h2>
+            <div class="gallery-grid gallery-grid-2">
+                <!-- Gallery 2 items will be loaded dynamically -->
+                <div class="loading-text">Cargando galería...</div>
             </div>
         </div>
     </section>
