--- a/pl.html
+++ b/pl.html
@@ -203,10 +203,21 @@
     <!-- Gallery Section -->
     <section id="gallery">
         <div class="container">
-            <h2 class="fade-up">Galeria Prac</h2>
+            <h2 class="fade-up">Galeria Akwareli</h2>
             <div class="gallery-grid">
                 <!-- Gallery items will be loaded dynamically from the gallery directory -->
-                <div class="loading-text">Loading gallery...</div>
+                <div class="loading-text">Ładowanie galerii...</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery 2 Section -->
+    <section id="gallery2" class="gallery-section">
+        <div class="container">
+            <h2 class="fade-up">Realizm Magiczny</h2>
+            <div class="gallery-grid gallery-grid-2">
+                <!-- Gallery 2 items will be loaded dynamically -->
+                <div class="loading-text">Ładowanie galerii...</div>
             </div>
         </div>
     </section>
@@ -292,7 +303,7 @@
     
     <footer class="site-footer">
         <div class="footer-content">
-            <p>Stworzone z ❤️ w 2025 dla Katerine Salazar przez Przemysława Majdaka</p>
+            <p>Stworzone z ❤️ w 2025 dla Katerine Salazar przez Przemysław Majdak</p>
         </div>
     </footer>
     </body>
