--- a/prezentacja/05.html
+++ b/prezentacja/05.html
@@ -14,8 +14,10 @@
             font-family: 'Montserrat', sans-serif;
         }
         .slide-container {
-            width: 1280px;
-            min-height: 720px;
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
             position: relative;
             background-color: #1E3A8A;
             color: white;
