--- a/prezentacja/10.html
+++ b/prezentacja/10.html
@@ -16,8 +16,10 @@
         font-family: 'Montserrat', sans-serif;
     }
     .slide-container {
-        width: 1280px;
-        min-height: 720px;
+            margin: 0;
+            padding: 0;
+        width: 100vw;
+        height: 100vh;
         position: relative;
         background-color: #1E3A8A;
         color: white;
@@ -53,7 +55,7 @@
         color: #FF9E2C;
     }
     .text-content {
-        font-size: 20px;
+        font-size: 1.5vw;
         font-family: 'Lora', serif;
         line-height: 1.6;
     }
