--- a/prezentacja/index.html
+++ b/prezentacja/index.html
@@ -16,12 +16,16 @@
             font-family: 'Montserrat', sans-serif;
         }
         .slide-container {
-            width: 1280px;
-            min-height: 720px;
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
             position: relative;
             background-color: #1E3A8A;
             color: white;
             overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
         .bg-pattern {
             position: absolute;
@@ -39,14 +43,14 @@
             padding: 40px;
         }
         .title {
-            font-size: 42px;
+            font-size: 3.5vw;
             font-weight: bold;
             margin-bottom: 10px;
             color: #FFD700;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         }
         .subtitle {
-            font-size: 28px;
+            font-size: 2.2vw;
             font-family: 'Lora', serif;
             margin-bottom: 10px;
             color: #FFFFFF;
@@ -55,8 +59,8 @@
             position: absolute;
             top: 0;
             right: 0;
-            width: 150px;
-            height: 150px;
+            width: 15vw;
+            height: 15vw;
             overflow: hidden;
         }
         .flag-decoration::before {
@@ -64,8 +68,8 @@
             position: absolute;
             top: -25px;
             right: -25px;
-            width: 150px;
-            height: 150px;
+            width: 15vw;
+            height: 15vw;
             background-color: #FCD116; /* Yellow from Colombian flag */
             transform: rotate(45deg);
         }
@@ -74,7 +78,7 @@
             position: absolute;
             top: -25px;
             right: -25px;
-            width: 150px;
+            width: 15vw;
             height: 75px;
             background-color: #003893; /* Blue from Colombian flag */
             transform: rotate(45deg);
@@ -83,7 +87,7 @@
             position: absolute;
             bottom: 40px;
             right: 40px;
-            font-size: 20px;
+            font-size: 1.5vw;
             color: #FFFFFF;
             text-align: right;
         }
